[tool.poetry]
name = "repl_python3_Alaine-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
youtube_dl = "^2021.12.17"
discord-pretty-help = "^1.3.3"
Flask = "^2.0.2"
ussd-session = "^0.1.6"
nsfw-dl = "^0.4.1"
functions = "^0.7.0"
fuzzywuzzy = "^0.18.0"
objects = "^0.3.1"
PyNaCl = "^1.4.0"
colour = "^0.1.5"
discord-components = "^2.1.2"
discord-ext-slash = "^0.9.2"
discord-py-slash-command = "^3.0.3"
discord-interactions = "^0.3.0"
aiofiles = "^0.8.0"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
